project/test_disk_memory/log.txt
   Compiling semver-parser v0.7.0
   Compiling libc v0.2.62
   Compiling autocfg v0.1.6
   Compiling rand_core v0.4.2
   Compiling byteorder v1.3.2
   Compiling proc-macro2 v0.4.30
   Compiling log v0.4.8
   Compiling arrayvec v0.4.11
   Compiling getrandom v0.1.12
   Compiling proc-macro2 v1.0.4
   Compiling stable_deref_trait v1.1.1
   Compiling nodrop v0.1.13
   Compiling smallvec v0.6.10
   Compiling lazy_static v1.4.0
   Compiling unicode-xid v0.2.0
   Compiling cfg-if v0.1.10
   Compiling unicode-xid v0.1.0
   Compiling cc v1.0.45
   Compiling either v1.5.3
   Compiling scopeguard v0.3.3
   Compiling memchr v2.2.1
   Compiling core-foundation-sys v0.6.2
   Compiling fnv v1.0.6
   Compiling slab v0.4.2
   Compiling syn v0.15.44
   Compiling ppv-lite86 v0.2.5
   Compiling futures v0.1.29
   Compiling syn v1.0.5
   Compiling scopeguard v1.0.0
   Compiling version_check v0.1.5
   Compiling matches v0.1.8
   Compiling serde v1.0.101
   Compiling failure_derive v0.1.5
   Compiling ryu v1.0.0
   Compiling rustc-demangle v0.1.16
   Compiling httparse v1.3.4
   Compiling itoa v0.4.4
   Compiling native-tls v0.2.3
   Compiling pkg-config v0.3.16
   Compiling indexmap v1.2.0
   Compiling percent-encoding v2.1.0
   Compiling crc32fast v1.2.0
   Compiling try-lock v0.2.2
   Compiling remove_dir_all v0.5.2
   Compiling percent-encoding v1.0.1
   Compiling regex-syntax v0.6.12
   Compiling adler32 v1.0.4
   Compiling encoding_rs v0.8.20
   Compiling mime v0.3.14
   Compiling dtoa v0.4.4
   Compiling matrixmultiply v0.1.15
   Compiling ndarray v0.12.1
   Compiling rawpointer v0.1.0
   Compiling blas-src v0.2.1
   Compiling rand_core v0.3.1
   Compiling rand_chacha v0.1.1
   Compiling rand_pcg v0.1.2
   Compiling rand v0.6.5
   Compiling num-traits v0.2.8
   Compiling num-complex v0.2.3
   Compiling semver v0.9.0
   Compiling owning_ref v0.4.0
   Compiling thread_local v0.3.6
   Compiling crossbeam-utils v0.6.6
   Compiling try_from v0.3.2
   Compiling itertools v0.7.11
   Compiling unicode-normalization v0.1.8
   Compiling c2-chacha v0.2.2
   Compiling unicode-bidi v0.3.4
   Compiling unicase v2.5.1
   Compiling error-chain v0.12.1
   Compiling backtrace-sys v0.1.31
   Compiling tokio-sync v0.1.6
   Compiling lzma-sys v0.1.15
   Compiling miniz_oxide v0.3.2
   Compiling rand_isaac v0.1.1
   Compiling rand_hc v0.1.0
   Compiling rand_xorshift v0.1.1
   Compiling lock_api v0.1.5
   Compiling rustc_version v0.2.3
   Compiling tokio-executor v0.1.8
   Compiling crossbeam-queue v0.1.2
   Compiling idna v0.1.5
   Compiling idna v0.2.0
   Compiling want v0.2.0
   Compiling rand_jitter v0.1.4
   Compiling rand_os v0.1.3
   Compiling iovec v0.1.2
   Compiling net2 v0.2.33
   Compiling num_cpus v1.10.1
   Compiling time v0.1.42
   Compiling filetime v0.2.7
   Compiling xattr v0.2.2
   Compiling rand v0.5.6
   Compiling cblas-sys v0.1.4
   Compiling lapacke-sys v0.1.4
   Compiling base64 v0.10.1
   Compiling regex-automata v0.1.8
   Compiling parking_lot_core v0.4.0
   Compiling memoffset v0.5.1
   Compiling hyper v0.12.35
   Compiling tokio-timer v0.2.11
   Compiling tokio-current-thread v0.1.6
   Compiling security-framework-sys v0.3.1
   Compiling core-foundation v0.6.4
   Compiling quote v0.6.13
   Compiling flate2 v1.0.11
   Compiling quote v1.0.2
   Compiling url v1.7.2
   Compiling url v2.1.0
   Compiling bytes v0.4.12
   Compiling rand_core v0.5.1
   Compiling futures-cpupool v0.1.8
   Compiling mio v0.6.19
   Compiling aho-corasick v0.7.6
   Compiling csv-core v0.1.6
   Compiling tar v0.4.26
   Compiling security-framework v0.3.1
   Compiling mime_guess v2.0.1
   Compiling backtrace v0.3.38
   Compiling tokio-io v0.1.12
   Compiling tokio-buf v0.1.1
   Compiling http v0.1.18
   Compiling string v0.2.1
   Compiling cookie v0.12.0
   Compiling rand_chacha v0.2.1
   Compiling uuid v0.7.4
   Compiling xz2 v0.1.6
   Compiling regex v1.3.1
   Compiling rand v0.7.2
   Compiling parking_lot v0.7.1
   Compiling crossbeam-epoch v0.7.2
   Compiling h2 v0.1.26
   Compiling http-body v0.1.0
   Compiling serde_derive v1.0.101
   Compiling tokio-reactor v0.1.9
   Compiling crossbeam-deque v0.7.1
   Compiling synstructure v0.10.2
   Compiling tempfile v3.1.0
   Compiling tokio-tcp v0.1.3
   Compiling tokio-threadpool v0.1.15
   Compiling publicsuffix v1.5.3
   Compiling tokio v0.1.22
   Compiling failure v0.1.5
   Compiling hyper-tls v0.3.2
   Compiling serde_json v1.0.40
   Compiling serde_urlencoded v0.5.5
   Compiling bstr v0.2.8
   Compiling cauchy v0.2.2
   Compiling lapacke v0.2.0
   Compiling csv v1.1.1
   Compiling cookie_store v0.7.0
   Compiling reqwest v0.9.20
   Compiling intel-mkl-src v0.4.0
   Compiling lapack-src v0.3.0
   Compiling blas-src v0.3.0
   Compiling ndarray-linalg v0.11.1
   Compiling test_disk_memory v0.1.0 (/Users/sinsakuokazaki/master-thesis/project/test_disk_memory)
error: expected one of `.`, `;`, `?`, `}`, or an operator, found `println`
  --> src/main.rs:40:5
   |
39 |     println!("{:?}"&d)
   |                       - expected one of `.`, `;`, `?`, `}`, or an operator here
40 |     println!("{:?}",&w);
   |     ^^^^^^^ unexpected token

error: format argument must be a string literal
  --> src/main.rs:39:14
   |
39 |     println!("{:?}"&d)
   |              ^^^^^^^^
help: you might be missing a string literal to format with
   |
39 |     println!("{}", "{:?}"&d)
   |              ^^^^^

error[E0308]: mismatched types
  --> src/main.rs:39:5
   |
39 |     println!("{:?}"&d)
   |     ^^^^^^^^^^^^^^^^^^ expected enum `std::result::Result`, found ()
   |
   = note: expected type `std::result::Result<(), std::boxed::Box<(dyn std::error::Error + 'static)>>`
              found type `()`
   = note: this error originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0308`.
error: Could not compile `test_disk_memory`.

To learn more, run the command again with --verbose.

real	2m57.893s
user	6m6.141s
sys	0m26.507s
   Compiling test_disk_memory v0.1.0 (/Users/sinsakuokazaki/master-thesis/project/test_disk_memory)
error: expected one of `.`, `;`, `?`, `}`, or an operator, found `println`
  --> src/main.rs:40:5
   |
39 |     println!("{:?}"&d)
   |                       - expected one of `.`, `;`, `?`, `}`, or an operator here
40 |     println!("{:?}",&w);
   |     ^^^^^^^ unexpected token

error: format argument must be a string literal
  --> src/main.rs:39:14
   |
39 |     println!("{:?}"&d)
   |              ^^^^^^^^
help: you might be missing a string literal to format with
   |
39 |     println!("{}", "{:?}"&d)
   |              ^^^^^

error[E0308]: mismatched types
  --> src/main.rs:39:5
   |
39 |     println!("{:?}"&d)
   |     ^^^^^^^^^^^^^^^^^^ expected enum `std::result::Result`, found ()
   |
   = note: expected type `std::result::Result<(), std::boxed::Box<(dyn std::error::Error + 'static)>>`
              found type `()`
   = note: this error originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0308`.
error: Could not compile `test_disk_memory`.

To learn more, run the command again with --verbose.

real	0m0.673s
user	0m0.310s
sys	0m0.158s
   Compiling test_disk_memory v0.1.0 (/Users/sinsakuokazaki/master-thesis/project/test_disk_memory)
error: expected one of `.`, `;`, `?`, `}`, or an operator, found `println`
  --> src/main.rs:40:5
   |
39 |     println!("{:?}"&d)
   |                       - expected one of `.`, `;`, `?`, `}`, or an operator here
40 |     println!("{:?}",&w);
   |     ^^^^^^^ unexpected token

error: format argument must be a string literal
  --> src/main.rs:39:14
   |
39 |     println!("{:?}"&d)
   |              ^^^^^^^^
help: you might be missing a string literal to format with
   |
39 |     println!("{}", "{:?}"&d)
   |              ^^^^^

error[E0308]: mismatched types
  --> src/main.rs:39:5
   |
39 |     println!("{:?}"&d)
   |     ^^^^^^^^^^^^^^^^^^ expected enum `std::result::Result`, found ()
   |
   = note: expected type `std::result::Result<(), std::boxed::Box<(dyn std::error::Error + 'static)>>`
              found type `()`
   = note: this error originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0308`.
error: Could not compile `test_disk_memory`.

To learn more, run the command again with --verbose.

real	0m0.357s
user	0m0.274s
sys	0m0.079s
   Compiling test_disk_memory v0.1.0 (/Users/sinsakuokazaki/master-thesis/project/test_disk_memory)
error: expected one of `.`, `;`, `?`, `}`, or an operator, found `println`
  --> src/main.rs:40:5
   |
39 |     println!("{:?}"d)
   |                      - expected one of `.`, `;`, `?`, `}`, or an operator here
40 |     println!("{:?}",w);
   |     ^^^^^^^ unexpected token

error: suffixes on a string literal are invalid
  --> src/main.rs:39:14
   |
39 |     println!("{:?}"d)
   |              ^^^^^^^ invalid suffix `d`

error[E0308]: mismatched types
  --> src/main.rs:39:5
   |
39 |     println!("{:?}"d)
   |     ^^^^^^^^^^^^^^^^^ expected enum `std::result::Result`, found ()
   |
   = note: expected type `std::result::Result<(), std::boxed::Box<(dyn std::error::Error + 'static)>>`
              found type `()`
   = note: this error originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0308`.
error: Could not compile `test_disk_memory`.

To learn more, run the command again with --verbose.

real	0m0.373s
user	0m0.284s
sys	0m0.083s
   Compiling test_disk_memory v0.1.0 (/Users/sinsakuokazaki/master-thesis/project/test_disk_memory)
error: expected one of `.`, `;`, `?`, `}`, or an operator, found `println`
  --> src/main.rs:40:5
   |
39 |     println!("{:?}"d)
   |                      - expected one of `.`, `;`, `?`, `}`, or an operator here
40 |     println!("{:?}",w);
   |     ^^^^^^^ unexpected token

error: suffixes on a string literal are invalid
  --> src/main.rs:39:14
   |
39 |     println!("{:?}"d)
   |              ^^^^^^^ invalid suffix `d`

error[E0308]: mismatched types
  --> src/main.rs:39:5
   |
39 |     println!("{:?}"d)
   |     ^^^^^^^^^^^^^^^^^ expected enum `std::result::Result`, found ()
   |
   = note: expected type `std::result::Result<(), std::boxed::Box<(dyn std::error::Error + 'static)>>`
              found type `()`
   = note: this error originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0308`.
error: Could not compile `test_disk_memory`.

To learn more, run the command again with --verbose.

real	0m0.359s
user	0m0.276s
sys	0m0.077s
   Compiling test_disk_memory v0.1.0 (/Users/sinsakuokazaki/master-thesis/project/test_disk_memory)
error: expected one of `.`, `;`, `?`, `}`, or an operator, found `println`
  --> src/main.rs:40:5
   |
39 |     println!("{:?}"d)
   |                      - expected one of `.`, `;`, `?`, `}`, or an operator here
40 |     println!("{:?}",w);
   |     ^^^^^^^ unexpected token

error: suffixes on a string literal are invalid
  --> src/main.rs:39:14
   |
39 |     println!("{:?}"d)
   |              ^^^^^^^ invalid suffix `d`

error[E0308]: mismatched types
  --> src/main.rs:39:5
   |
39 |     println!("{:?}"d)
   |     ^^^^^^^^^^^^^^^^^ expected enum `std::result::Result`, found ()
   |
   = note: expected type `std::result::Result<(), std::boxed::Box<(dyn std::error::Error + 'static)>>`
              found type `()`
   = note: this error originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0308`.
error: Could not compile `test_disk_memory`.

To learn more, run the command again with --verbose.

real	0m0.357s
user	0m0.275s
sys	0m0.078s
   Compiling test_disk_memory v0.1.0 (/Users/sinsakuokazaki/master-thesis/project/test_disk_memory)
error: expected one of `.`, `;`, `?`, `}`, or an operator, found `println`
  --> src/main.rs:40:5
   |
39 |     println!("{:?}",d)
   |                       - expected one of `.`, `;`, `?`, `}`, or an operator here
40 |     println!("{:?}",w);
   |     ^^^^^^^ unexpected token

error[E0308]: mismatched types
  --> src/main.rs:39:5
   |
39 |     println!("{:?}",d)
   |     ^^^^^^^^^^^^^^^^^^ expected enum `std::result::Result`, found ()
   |
   = note: expected type `std::result::Result<(), std::boxed::Box<(dyn std::error::Error + 'static)>>`
              found type `()`
   = note: this error originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
error: Could not compile `test_disk_memory`.

To learn more, run the command again with --verbose.

real	0m0.356s
user	0m0.274s
sys	0m0.076s
   Compiling test_disk_memory v0.1.0 (/Users/sinsakuokazaki/master-thesis/project/test_disk_memory)
error: expected one of `.`, `;`, `?`, `}`, or an operator, found `println`
  --> src/main.rs:40:5
   |
39 |     println!("{:?}",d)
   |                       - expected one of `.`, `;`, `?`, `}`, or an operator here
40 |     println!("{:?}",w);
   |     ^^^^^^^ unexpected token

error[E0308]: mismatched types
  --> src/main.rs:39:5
   |
39 |     println!("{:?}",d)
   |     ^^^^^^^^^^^^^^^^^^ expected enum `std::result::Result`, found ()
   |
   = note: expected type `std::result::Result<(), std::boxed::Box<(dyn std::error::Error + 'static)>>`
              found type `()`
   = note: this error originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
error: Could not compile `test_disk_memory`.

To learn more, run the command again with --verbose.

real	0m0.354s
user	0m0.273s
sys	0m0.077s
   Compiling test_disk_memory v0.1.0 (/Users/sinsakuokazaki/master-thesis/project/test_disk_memory)
error: expected one of `.`, `;`, `?`, `}`, or an operator, found `println`
  --> src/main.rs:40:5
   |
39 |     println!("{:?}",d)
   |                       - expected one of `.`, `;`, `?`, `}`, or an operator here
40 |     println!("{:?}",w);
   |     ^^^^^^^ unexpected token

error[E0308]: mismatched types
  --> src/main.rs:39:5
   |
39 |     println!("{:?}",d)
   |     ^^^^^^^^^^^^^^^^^^ expected enum `std::result::Result`, found ()
   |
   = note: expected type `std::result::Result<(), std::boxed::Box<(dyn std::error::Error + 'static)>>`
              found type `()`
   = note: this error originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
error: Could not compile `test_disk_memory`.

To learn more, run the command again with --verbose.

real	0m0.355s
user	0m0.274s
sys	0m0.077s
   Compiling test_disk_memory v0.1.0 (/Users/sinsakuokazaki/master-thesis/project/test_disk_memory)
    Finished dev [unoptimized + debuginfo] target(s) in 2.00s
     Running `target/debug/test_disk_memory ../data/input1.csv output/output1.csv`
[1000, 100]
[0.94994146, 0.004415047, 0.020868603, -0.008236102, -0.045449533, -0.014527604, -0.017949041, 0.036783542, -0.0029534346, -0.010093733, -0.028282939, 0.022096395, -0.017853038, -0.022356307, 0.053792395, -0.018196018, -0.009973165, -0.009729898, 0.020077795, -0.05755359, -0.0020434055, 0.028444069, -0.020007284, -0.06292595, 0.0038474284, -0.05621482, 0.0030596843, -0.071051866, 0.005175583, -0.0465938, -0.03329721, -0.016073132, 0.017213643, -0.03245118, 0.040158745, 0.0011911164, 0.018076928, -0.022826238, -0.010795106, -0.0048172087, -0.025663527, -0.0083460435, 0.019488866, -0.0049053114, -0.0071571073, 0.015195563, -0.07731806, -0.024430834, -0.031767927, -0.020726629, 0.027537648, -0.06796889, -0.044194818, 0.027225742, 0.02093343, -0.021517145, 0.029831426, 0.03302709, -0.037301913, 0.019058792, 0.057556335, -0.015813226, -0.0761351, 0.04473601, -0.04345592, -0.059379794, -0.06326678, 0.02670252, -0.03753128, 0.023477241, -0.047418665, -0.025054645, -0.021046674, 0.035080515, -0.0025546446, -0.02769663, -0.038101137, 0.025201596, 0.007864104, -0.021667713, -0.023459474, 0.044466764, 0.004417914, 0.0045243325, 0.022649067, -0.009773494, 0.032097545, -0.03473996, -0.010977375, 0.039875936, -0.012809165, -0.0041716816, -0.049568858, -0.049016833, -0.067426205, 0.027267175, 0.05234844, -0.0794748, -0.0129819615] shape=[99], strides=[1], layout=C | F (0x3), const ndim=1

real	0m3.057s
user	0m3.899s
sys	0m0.428s
    Finished dev [unoptimized + debuginfo] target(s) in 0.10s
     Running `target/debug/test_disk_memory ../data/input2.csv output/output2.csv`
[2000, 100]
[0.5685524, -0.015154689, -0.038300835, 0.044719156, -0.007058335, -0.035065077, -0.010429814, 0.016117275, -0.022732558, 0.021854704, 0.0076639554, -0.029210221, -0.020910492, -0.005908521, 0.028241085, -0.01591109, 0.057022154, 0.00059154, -0.0070353234, -0.0029379756, -0.049775463, -0.022554627, 0.03570219, 0.022146013, 0.03767724, -0.0070637525, -0.0058434526, -0.029915394, -0.010166946, 0.04613458, -0.020712249, -0.0032192653, 0.021945218, -0.02271733, -0.033709634, 0.0027715822, 0.02984081, -0.040241692, 0.027876694, 0.02377586, -0.031995513, -0.02112054, -0.048035935, 0.05836397, 0.007360855, 0.02952994, 0.022411318, 0.0016070153, 0.020285398, 0.025092375, 0.009817849, -0.026436998, 0.028829202, 0.030033987, -0.0028231847, 0.013199131, 0.021449272, -0.021499516, 0.020497467, -0.011078245, 0.049362566, -0.0020575577, -0.035066195, -0.043084793, -0.037703123, -0.013050736, 0.004514083, 0.04682894, -0.0038213283, -0.0029035846, 0.03660372, 0.030307902, 0.029047012, -0.021935308, 0.0094533255, -0.009183952, 0.00029116907, 0.0020204654, -0.0070707183, 0.0049505676, 0.0024548946, 0.017801639, -0.0074839774, -0.01791923, -0.07555095, 0.011058674, -0.018445646, 0.017388457, -0.076024644, -0.00016947075, -0.022662273, -0.01948333, -0.02399953, -0.06208044, 0.02384328, -0.008562799, -0.01244425, -0.0060242875, 0.0058337497] shape=[99], strides=[1], layout=C | F (0x3), const ndim=1

real	0m1.847s
user	0m1.777s
sys	0m0.053s
    Finished dev [unoptimized + debuginfo] target(s) in 0.10s
     Running `target/debug/test_disk_memory ../data/input3.csv output/output3.csv`
[3000, 100]
[0.5589027, -0.0100608645, 0.023179704, 0.03153698, -0.017997526, -0.0036436657, -0.02526394, -0.0015175303, 0.0013295413, 0.011071689, 0.0020241563, -0.017800951, 0.011163342, 0.0016045774, -0.01957758, -0.0032188937, -0.015822936, 0.017843472, -0.0027889637, 0.0198221, 0.022991821, 0.007680028, -0.023979552, 0.021378612, -0.013762025, -0.0063532135, 0.00077453884, 0.030290447, 0.008961304, -0.0213841, 0.0198388, -0.0017450002, 0.0010435422, 0.035040826, 0.040654246, -0.036165778, 0.028758872, -0.045138665, -0.02026275, 0.01811798, -0.009822769, 0.0029129265, -0.04457895, 0.0103023425, 0.0005783684, 0.004984801, 0.0018635669, 0.009625882, 0.02503905, 0.022437472, 0.017172458, 0.0035281626, -0.012474869, 0.0043706708, 0.021909868, -0.005136904, -0.012591803, -0.013796911, 0.021221183, -0.019130433, -0.00007233943, -0.001480674, 0.012596903, -0.009316866, 0.011984882, -0.01997823, 0.020404248, -0.044915628, -0.04530897, 0.014076234, 0.030288491, -0.013895389, 0.048931383, -0.003711484, 0.002455566, 0.004460046, 0.004061301, 0.031336494, -0.01866371, -0.0683526, 0.03001966, -0.011930826, -0.025849199, -0.02671754, 0.022913517, -0.020114008, 0.017208342, -0.011674337, 0.012594449, -0.0065694526, -0.02815958, -0.01475494, -0.012702144, -0.040287524, -0.04120506, -0.004565562, -0.0063940706, -0.0029201314, -0.008085858] shape=[99], strides=[1], layout=C | F (0x3), const ndim=1

real	0m2.640s
user	0m2.557s
sys	0m0.056s
